@@ -1,3 +1,9 @@
+Wed Apr 30 11:18:36 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* recurse.c (start_recursion): Also free reposfile.
+	Don't look in repository if client_active (latter bug reported by Paul
+	Sanders <p.sanders@dial.pipex.com>).
+
 Mon Apr 28 22:36:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* diff.c (diff_file_nodiff): Remove SERVER_SUPPORT ifdefs.  They
